# http-protocol-testing

./: .gitignore  README.md  client.py  pyproject.toml  server.py
.github/workflows/: ci.yml
tests/acceptance/: test_e2e.py
tests/integration/: test_client_server.py
tests/unit/: test_client.py  test_server.py
