[project]
name = "testing-http-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "coverage>=7.6.12",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = [
    "--import-mode=importlib",
]

[tool.mypy]
strict = true
